syntax = "proto3";

package grpc;

option optimize_for = SPEED;
option java_multiple_files = false;
option java_package = "com.katruk.grpc.server.api.pb";
option java_outer_classname = "Hello";

service HelloApi {
    rpc trySay (HelloRequest) returns (HelloResponse);
    rpc cfSay (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}
